white space issue

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@ canvas {
   position: fixed;
   top: 0;
   left: 0;
+  display: block;
+  font-size: 0;
 }
 
 main {
@@ -187,12 +189,5 @@ blockquote p {
 
   h1 {
     font-size: 2.5rem;
-  }
-
-  canvas {
-    display: block;
-    margin: 0;
-    padding: 0;
-    margin-bottom: -100px;
   }
 }
